[gd_scene load_steps=2 format=3 uid="uid://bhsr238nb4e27"]

[ext_resource type="Script" uid="uid://cw2ds56kqxj4f" path="res://global/global_enemy_spawner_timer.gd" id="1_qq87f"]

[node name="GlobalEnemySpawnerTimer" type="Node"]
script = ExtResource("1_qq87f")

[node name="PeaceTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemySpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="PeaceTimer" to="." method="_on_peace_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
